<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:clickable="false"
    android:longClickable="false"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="false"
        android:layout_marginTop="0dp"
        android:text="@string/debug_default_text"
        android:id="@+id/debug" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="false"
        android:layout_marginTop="30dp"
        android:text="@string/debug1_default_text"
        android:id="@+id/debug1" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="false"
        android:layout_marginTop="60dp"
        android:text="@string/debug2_default_text"
        android:id="@+id/debug2" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="false"
        android:layout_marginTop="90dp"
        android:text="@string/debug3_default_text"
        android:id="@+id/debug3" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="false"
        android:layout_marginTop="120dp"
        android:text="@string/debug4_default_text"
        android:id="@+id/debug4" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="false"
        android:layout_marginTop="170dp"
        android:layout_centerHorizontal="true"
        android:text="@string/wifi_scan_list_title" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="false"
        android:layout_marginTop="190dp"
        android:layout_marginLeft="93dp"
        android:text="@string/wifi_scan_results_list"
        android:id="@+id/wifi_scan_results_list" />

</RelativeLayout>